added sampling script

--- a/sampling_simple.ipynb
+++ b/sampling_simple.ipynb
@@ -18,48 +18,8 @@
     "import torch\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "import guided_diffusion as gd\n",
-    "from dataset import CustomDataset\n",
-    "\n",
-    "def create_gaussian_diffusion(\n",
-    "        *,\n",
-    "        steps=1000,\n",
-    "        learn_sigma=False,\n",
-    "        sigma_small=False,\n",
-    "        noise_schedule=\"linear\",\n",
-    "        use_kl=False,\n",
-    "        predict_xstart=False,\n",
-    "        rescale_timesteps=False,\n",
-    "        rescale_learned_sigmas=False,\n",
-    "        timestep_respacing=\"\",\n",
-    "):\n",
-    "    betas = gd.get_named_beta_schedule(noise_schedule, steps)\n",
-    "    if use_kl:\n",
-    "        loss_type = gd.LossType.RESCALED_KL\n",
-    "    elif rescale_learned_sigmas:\n",
-    "        loss_type = gd.LossType.RESCALED_MSE\n",
-    "    else:\n",
-    "        loss_type = gd.LossType.MSE\n",
-    "    if not timestep_respacing:\n",
-    "        timestep_respacing = [steps]\n",
-    "    return gd.SpacedDiffusion(\n",
-    "        use_timesteps=gd.space_timesteps(steps, timestep_respacing),\n",
-    "        betas=betas,\n",
-    "        model_mean_type=(\n",
-    "            gd.ModelMeanType.EPSILON if not predict_xstart else gd.ModelMeanType.START_X\n",
-    "        ),\n",
-    "        model_var_type=(\n",
-    "            (\n",
-    "                gd.ModelVarType.FIXED_LARGE\n",
-    "                if not sigma_small\n",
-    "                else gd.ModelVarType.FIXED_SMALL\n",
-    "            )\n",
-    "            if not learn_sigma\n",
-    "            else gd.ModelVarType.LEARNED_RANGE\n",
-    "        ),\n",
-    "        loss_type=loss_type,\n",
-    "        rescale_timesteps=rescale_timesteps,\n",
-    "    )\n"
+    "from guided_diffusion import *\n",
+    "from dataset import CustomDataset\n"
    ]
   },
   {
